[package]
name = "ztest"
description = "Custom testing framework for no_std projects"
categories = ["test", "zesty", "orion"]
version = "0.1.0"
authors = ["Malachi Austin <karrighan@protonmail.com>"]

[lib]
name = "ztest"
path = "src/ztest.rs"

[dependencies]
ztest-qemu = { path = "ztest-qemu", version = "0.1.0" }
ztest-semihosting = { path = "ztest-semihosting", version = "0.1.0" }
